# Proyecto1_IE0724

./: 1puntosTest.txt  2puntosTest.txt
.github/workflows/: cmake.yml
cmake_new/: .qglviewer.xml  CMakeCache.txt  CMakeLists.txt  README  draw_voronoi_diagram_2.cpp  leerPuntos.cpp  main.cpp  puntos.txt
cmake_new/includesProyecto1/: Punto.cpp
cmake_test/: CMakeLists.txt  exe  makefile
cmake_test/include/: hello_world.h
cmake_test/src/: hello_world.cpp
cmake_test/test/: main.cpp
